--- a/Natura Ayacucho/Views/Shared/_Layout.cshtml
+++ b/Natura Ayacucho/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Shoplist A Ecommerce Category Flat Bootstrap Responsive  Website Template | Home :: w3layouts</title>
+    <title>NATURA AYACUCHO TIENDA VIRTUAL</title>
     <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="~/js/jquery-1.11.0.min.js"></script>
@@ -35,6 +35,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <!-- //end-smoth-scrolling -->
     <script src="~/js/simpleCart.min.js"> </script>
     <script src="~/js/bootstrap.min.js"></script>
+    <link href="~/Logos/logo icono.ico" rel="icon" />
 </head>
 <body>
     <!--header strat here-->
@@ -52,13 +53,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                     <span class="icon-bar"></span>
                                 </button>
                                 <div class="navbar-brand logo">
-                                    <a href="index.html"><img src="~/images/logo1.png" alt=""></a>
+                                    <a href="index.html"><img src="~/Logos/logo.jpg" alt=""></a>
                                 </div>
                             </div>
                             <!--/.navbar-header-->
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">INICIO</a></li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">VARON<b class="caret"></b></a>
                                         <ul class="dropdown-menu multi-column columns-3">
@@ -243,30 +244,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="ftr-grids-block">
                     <div class="col-md-3 footer-grid">
                         <ul>
-                            <li><a href="product.html">Accessories</a></li>
-                            <li><a href="product.html">Hand bags</a></li>
-                            <li><a href="product.html">Clothing</a></li>
-                            <li><a href="product.html">Brands</a></li>
-                            <li><a href="product.html">Watches</a></li>
+                            <li><a href="product.html">INICIO</a></li>
+                            <li><a href="product.html">VARON</a></li>
+                            <li><a href="product.html">MUJER</a></li>
+                            <li><a href="product.html">MAQUILLAJE</a></li>
+                            @*<li><a href="product.html">Watches</a></li>*@
                         </ul>
                     </div>
                     <div class="col-md-3 footer-grid">
                         <ul>
-                            <li><a href="login.html">Your Account</a></li>
-                            <li><a href="contact.html">Contact Us</a></li>
-                            <li><a href="product.html">Store Locator</a></li>
+                            <li><a href="login.html">TU CUENTA</a></li>
+                            <li><a href="contact.html">CONTACTANOS</a></li>
+                            <li><a href="product.html">UBICACION DE LA TIENDA</a></li>
                             <li><a href="pressroom.html">Press Room</a></li>
                         </ul>
                     </div>
                     <div class="col-md-3 footer-grid">
                         <ul>
-                            <li><a href="terms.html">Website Terms</a></li>
+                            <li><a href="~/Views/Home/Terminos.cshtml">TERMINOS DE LA TIENDA VIRTUAL</a></li>
                             <li>
                                 <select class="country">
-                                    <option value="select your location">Select Country</option>
-                                    <option value="saab">Australia</option>
-                                    <option value="fiat">Singapore</option>
-                                    <option value="audi">London</option>
+                                    <option value="select your location">SELECCIONAR PAIS</option>
+                                    <option value="saab">PERU/option>
+                                    <option value="fiat">OTRO</option>
+                                    @*<option value="audi">London</option>*@
                                 </select>
 
                             </li>
@@ -275,25 +276,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </div>
                     <div class="col-md-3 footer-grid-icon">
                         <ul>
-                            <li><a href="#"><span class="u-tub"> </span></a></li>
-                            <li><a href="#"><span class="instro"> </span></a></li>
-                            <li><a href="#"><span class="twitter"> </span></a></li>
-                            <li><a href="#"><span class="fb"> </span></a></li>
-                            <li><a href="#"><span class="print"> </span></a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/facebook.png" alt="Facebook" title="Facebook"> </a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/twitter.png" alt="Twitter" title="Twitter"> </a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/google_plus.png" alt="Google+" title="Google+"> </a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/pinterest.png" alt="Pinterest" title="Pinterest"> </a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/rss.png" alt="RSS" title="RSS"> </a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/youtube.png" alt="YouTube" title="Youtube"></a></li>
+                            <li><a href="#" target="_blank"> <img data-toggle="tooltip" src="~/Logos/instagram.png" alt="Instagram" title="Instagram"> </a></li>
                         </ul>
                         <form>
-                            <input class="email-ftr" type="text" value="Newsletter" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Newsletter';}">
-                            <input type="submit" value="Submit">
+                            <input class="email-ftr" type="text" value="Email@ejemplo.com" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email@ejemplo.com';}">
+                            <input type="submit" value="SUSCRIBIRME">
                         </form>
                     </div>
                     <div class="clearfix"> </div>
                 </div>
                 <div class="copy-rights">
-                    <p>© 2016 Shoplist. All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+                    <p>© 2017 TIENDA VIRTUAL Natura Ayacucho. All Rights Reserved | Design by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
                 </div>
             </div>
         </div>
     </div>
     <!--footer end here-->
+
+    <script src="~/js/jquery.form.min.js"></script>
+    @RenderSection("scripts", required: false)
 </body>
 </html>
