--- a/Natura Ayacucho/Views/Home/Index.cshtml
+++ b/Natura Ayacucho/Views/Home/Index.cshtml
@@ -3,28 +3,29 @@
     <div class="container">
         <div class="banner-main">
             <div class="col-md-6 banner-left">
-                <a href="single.html"><img src="~/images/ba.png" alt="" class="img-responsive"></a>
+                <a href="single.html"><img src="~/Logos/urbano.jpg" alt="" class="img-responsive"></a>
             </div>
             <div class="col-md-6 banner-right simpleCart_shelfItem">
                 <span class="bann-heart"> </span>
-                <h2>Handbags</h2>
-                <h1>Sed perspiciatis unde</h1>
-                <h5 class="item_price">$200.00</h5>
+                <h2>Perfumería</h2>
+                <h1>#URBANO RECRIA</h1>
+                <h6>Despierta tu mirada</h6>
+                <h5 class="item_price">S/. 109.00</h5>
                 <ul class="bann-small-img">
-                    <li><a href="single.html"><img src="~/images/b1.jpg"></a></li>
-                    <li><a href="single.html"><img src="~/images/b2.jpg"></a></li>
+                    <li><a href="single.html"><img src="~/Logos/urbano_1.jpg"></a></li>
+                    <li><a href="single.html"><img src="~/Logos/Urbano_2.jpg"></a></li>
                 </ul>
-                <h6>Size Charts</h6>
+                <h6>Modelos</h6>
                 <ul class="bann-btns">
                     <li>
                         <select class="bann-size">
-                            <option value="select your location">Size</option>
-                            <option value="saab">Small</option>
-                            <option value="fiat">Medium</option>
-                            <option value="audi">Large</option>
+                            <option value="select your location">Escoger</option>
+                            <option value="saab">Apresenta</option>
+                            <option value="fiat">Recria 2</option>
+                            @*<option value="audi">Large</option>*@
                         </select>
                     </li>
-                    <li><a href="#" class="item_add">Add To Cart</a></li>
+                    <li><a href="#" class="item_add">Agregar al carrito</a></li>
                 </ul>
             </div>
             <div class="clearfix"> </div>
@@ -36,13 +37,17 @@
 <div class="blc-layer2">
     <div class="container">
         <div class="blc-layer2-main">
-            <div class="col-md-6 blc-layer2-left">
-                <h3>voluptatem sequi nesciunt.</h3>
-                <p>But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system.</p>
-            </div>
-            <div class="col-md-6 blc-layer2-right">
-
-            </div>
+            <div class="col-md-12 blc-layer2-left">
+                @*<img src="~/Logos/maquilla_una.jpg" alt="">*@
+                <h3 class="blacktext"><strong>BIENVENIDA A NATURA AYACUCHO</strong></h3>
+                <p>Con nuevos productos en
+               tu tienda virtual en donde encontrarás muchas
+                ofertas, promociones y descuentos,
+                entregados en la puerta de su hogar o 
+                en la dirección acordada junto con Usted.</p>
+                </div>
+            <div class="col-md-12 blc-layer2-right">
+                </div>
             <div class="clearfix"> </div>
         </div>
     </div>
@@ -53,48 +58,48 @@
     <div class="container">
         <div class="blc-layer3-main">
             <div class="col-md-4 blc-layer3-grids1">
-                <h6>Story</h6>
-                <h3>Denouncing pleasure</h3>
-                <p>pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder.</p>
-                <h6>Benefits</h6>
+                <h6>NATURA HOMEM ESSENCE</h6>
+                <h3>Perfumería</h3>
+                <p>Los perfumes nos transportan a nuestros recuerdos, a nuestra memoria, llevándonos a momentos y lugares especiales. Al estar conectados con las emociones, las fragancias nos invitan a transformar un momento, un día o una noche en una experiencia única y especial.</p>
+                <h6>Descripción</h6>
                 <ul>
                     <li>
-                        <h4>Temporibus autem quibusdam</h4>
-                        <h5>At vero eos et accusamus et iusto odio</h5>
+                        <h4>Eau de parfum masculino 100ml</h4>
+                        <h5>amaderado, sensual, cashmeran</h5>
                     </li>
                     <li>
-                        <h4>These cases are perfectly</h4>
-                        <h5>voluptatum deleniti atque corrupti quos</h5>
+                        <h4>Edición limitada</h4>
+                        <h5>Nuevo lanzamiento 30% de descuento</h5>
                     </li>
                 </ul>
             </div>
             <div class="col-md-4 blc-layer3-grids2">
-                <a href="single.html"><img src="~/images/bracelate.png" alt=""></a>
+                <a href="single.html"><img src="~/Logos/Homen.jpg" alt=""></a>
             </div>
             <div class="col-md-4 blc-layer3-grids-3 simpleCart_shelfItem">
                 <div class="box-grid">
-                    <h3><a href="single.html">Brand</a></h3>
-                    <p>Nam libero tempore cum</p>
-                    <h5>At vero eos et accusamus iusto</h5>
-                    <a href="single.html"><img src="~/images/w2.png" alt=""></a>
+                    <h3><a href="single.html">AMIS</a></h3>
+                    <p>Más que amigas</p>
+                    <h5>AMIS. Lo mejor de la vida. Balm y labial</h5>
+                    <a href="single.html"><img src="~/Logos/Amis_femenina_labial_fresa_todo.jpg" alt=""></a>
                     <div class="box-grid-price">
                         <div class="box-grid-price-left">
-                            <h4>Stock</h4>
+                            <h4>En Stock</h4>
                         </div>
                         <div class="box-grid-price-rit">
-                            <h4 class="item_price">$250</h4>
+                            <h4 class="item_price">S/. 65.00</h4>
                         </div>
                         <div class="clearfix"> </div>
                     </div>
                     <ul class="bann-btns">
                         <li class="ys-margin">
                             <select class="bann-size">
-                                <option value="saab">Small</option>
-                                <option value="fiat">Medium</option>
-                                <option value="audi">Large</option>
+                                <option value="saab">Fresa</option>
+                                <option value="fiat">Naranja</option>
+                                <option value="audi">Uva</option>
                             </select>
                         </li>
-                        <li><a href="#" class="item_add">Add To Cart</a></li>
+                        <li><a href="#" class="item_add">Agregar al carrito</a></li>
                     </ul>
                 </div>
             </div>
@@ -110,56 +115,56 @@
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="product.html"><img src="~/images/h1.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="product.html"><img src="~/Logos/Ilia_natura.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="single.html">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
+                        <h3><a href="single.html">Compra Inteligente</a></h3>
+                        <p>Explora ahora</p>
                     </div>
                     <div class="srch">
-                        <span>$200</span>
+                        <span>S/. 140.00</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="product.html"><img src="~/images/h2.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="product.html"><img src="~/Logos/Faces_intensa_femenina.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="single.html">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
+                        <h3><a href="single.html">Compra Inteligente</a></h3>
+                        <p>Explora ahora</p>
                     </div>
                     <div class="srch">
-                        <span>$250</span>
+                        <span>S/. 92.00</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="product.html"><img src="~/images/h3.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="product.html"><img src="~/Logos/Biografia_femenina_desperte.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="single.html">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
+                        <h3><a href="single.html">Compra Inteligente</a></h3>
+                        <p>Explora ahora</p>
                     </div>
                     <div class="srch">
-                        <span>$150</span>
+                        <span>S/. 83.00</span>
                     </div>
                 </div>
             </div>
             <div class="col-md-3 home-grid">
                 <div class="home-product-main">
                     <div class="home-product-top">
-                        <a href="product.html"><img src="~/images/h4.jpg" alt="" class="img-responsive zoom-img"></a>
+                        <a href="product.html"><img src="~/Logos/Kaiak_urbe_solito.jpg" alt="" class="img-responsive zoom-img"></a>
                     </div>
                     <div class="home-product-bottom">
-                        <h3><a href="single.html">Smart Shopping</a></h3>
-                        <p>Explore Now</p>
+                        <h3><a href="single.html">Compra inteligente</a></h3>
+                        <p>Explora ahora</p>
                     </div>
                     <div class="srch">
-                        <span>$200</span>
+                        <span>S/. 114.00</span>
                     </div>
                 </div>
             </div>
