--- a/Natura Ayacucho/Views/Home/Boletin.cshtml
+++ b/Natura Ayacucho/Views/Home/Boletin.cshtml
@@ -7,7 +7,7 @@
                     <h1>Últimas noticias de la tienda</h1>
                     <div class="press-grid">
                         <div class="col-md-6 press-imgs">
-                            <img src="~/images/p1.jpg" alt="" class="img-responsive">
+                            <img src="~/Logos/otras noticias.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6 press-text">
                             <h2>Promociones</h2>
@@ -17,7 +17,7 @@
                     </div>
                     <div class="press-grid">
                         <div class="col-md-6 press-imgs">
-                            <img src="~/images/p2.jpg" alt="" class="img-responsive">
+                            <img src="~/Logos/promociones.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6 press-text">
                             <h3>Ofertas</h3>
@@ -27,7 +27,7 @@
                     </div>
                     <div class="press-grid">
                         <div class="col-md-6 press-imgs">
-                            <img src="~/images/p3.jpg" alt="" class="img-responsive">
+                            <img src="~/Logos/ofertas.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6 press-text">
                             <h3>Descuentos</h3>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="press-grid">
                         <div class="col-md-6 press-imgs">
-                            <img src="~/images/p4.jpg" alt="" class="img-responsive">
+                            <img src="~/Logos/descuentos.jpg" alt="" class="img-responsive">
                         </div>
                         <div class="col-md-6 press-text">
                             <h3>Otras noticias</h3>
