--- a/Natura Ayacucho/Views/Home/Contacto.cshtml
+++ b/Natura Ayacucho/Views/Home/Contacto.cshtml
@@ -3,26 +3,27 @@
     <div class="container">
         <div class="contact-main">
             <div class="contact-top">
-                <h1>Contact Us</h1>
-                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections Cicero are reproduced.</p>
+                <h1>CONTACTANOS</h1>
+                <p>Queremos leer tus comentarios para cualquier pregunta que tengas.</p>
             </div>
             <div class="col-md-6 contact-left">
-                <h2>Information</h2>
-                <h4>Cicero are also reproduced in their exact original</h4>
-                <p>The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English.</p>
+                <h2>Información</h2>
+                <h4>Recuerda que estamos para ayudarte</h4>
+                <p>Nuestra ubicación física.</p>
+                <p>Estamos ubicados en Av. Arenales 1542, San Juan Bautista, Huamanga, Ayacucho, Perú.</p>
                 <ul>
-                    <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"> </span>Professor at Hampden-Sydney</li>
-                    <li><span class="glyphicon glyphicon-phone" aria-hidden="true"> </span>+1284 485 978</li>
-                    <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"> </span><a href="mailto:info@example.com">correo@example.com</a></li>
+                    <li><span class="glyphicon glyphicon-map-marker" aria-hidden="true"> </span>Eder Solorzano</li>
+                    <li><span class="glyphicon glyphicon-phone" aria-hidden="true"> </span>+51 966 970 677</li>
+                    <li><span class="glyphicon glyphicon-envelope" aria-hidden="true"> </span><a href="mailto:info@example.com">correo@ejemplo.com</a></li>
                 </ul>
             </div>
             <div class="col-md-6 contact-right">
-                <h3>Feedback</h3>
+                <h3>ESCRIBENOS</h3>
                 <form>
-                    <input type="text" placeholder="Name" required="">
+                    <input type="text" placeholder="Nombre completo" required="">
                     <input type="text" placeholder="Email" required="">
-                    <textarea placeholder="Message" required=""></textarea>
-                    <input type="submit" value="send">
+                    <textarea placeholder="Mensaje" required=""></textarea>
+                    <input type="submit" value="Enviar">
                 </form>
             </div>
             <div class="clearfix"> </div>
